Get rid of collapsing on FAQ

--- a/templates/help.html
+++ b/templates/help.html
@@ -19,12 +19,12 @@
                         <div class="faq">
                           <div class="faq-heading">
 
-                            <div data-target="#faq1" data-toggle="collapse">
+                            <div data-target="#faq1">
                               <i class="icon-question-sign"></i>
                                 What if my doctor tells me something different?
                             </div>
                           </div>
-                          <div class="faq-body in" id="faq1">
+                          <div class="faq-body" id="faq1">
                             <div class="faq-inner">
                                 <p>Always listen to your doctor! Medicine is complex and extremely personal. Our understanding of diseases, diagnostics, and therapeutic options are changing daily.</p>
                                 <p>ClinDesk and White Coat Academy are only guides to help you understand conditions, and barely skim the surface of medicine. A medical professional knows best!</p>
@@ -37,12 +37,12 @@
                         <div class="faq">
                           <div class="faq-heading">
 
-                            <div data-target="#faq2" data-toggle="collapse">
+                            <div data-target="#faq2">
                               <i class="icon-question-sign"></i>
                               Can I trust what I find on ClinDesk and White Coat Academy?
                             </div>
                           </div>
-                          <div class="faq-body in" id="faq2">
+                          <div class="faq-body" id="faq2">
                             <div class="faq-inner">
                                 <p>We hope so! We go to great lengths to ensure our content is accurate, but we might make some mistakes (keep in mind we're medical students!).
                                 To make sure we're as error-free as possible, we review all our videos, and our clinical advisory board checks our content.</p>
@@ -56,12 +56,12 @@
                         <div class="faq">
                           <div class="faq-heading">
 
-                            <div data-target="#faq3" data-toggle="collapse">
+                            <div data-target="#faq3">
                               <i class="icon-question-sign"></i>
                                 Can I save or download your videos and other content? What's your copyright policy?
                             </div>
                           </div>
-                          <div class="faq-body in" id="faq3">
+                          <div class="faq-body" id="faq3">
                             <div class="faq-inner">
                                 <p>Yes, we encourage it -- with one caveat. We license all our content under a <a href="http://creativecommons.org/" target="_blank">Creative Commons</a> license.
                                 We've chosen the Creative Commons 3.0 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
@@ -81,12 +81,12 @@
                         <div class="faq">
                           <div class="faq-heading">
 
-                            <div data-target="#faq4" data-toggle="collapse">
+                            <div data-target="#faq4">
                               <i class="icon-question-sign"></i>
                                How can I give feedback? I think I found a mistake on the site.
                             </div>
                           </div>
-                          <div class="faq-body collapse" id="faq4">
+                          <div class="faq-body" id="faq4">
                             <div class="faq-inner">
                                 <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@clindesk.org">team@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
                             </div>
@@ -99,12 +99,12 @@
                         <div class="faq">
                           <div class="faq-heading">
 
-                            <div data-target="#faq5" data-toggle="collapse">
+                            <div data-target="#faq5">
                               <i class="icon-question-sign"></i>
                                 How is ClinDesk financed? Do you make money?
                             </div>
                           </div>
-                          <div class="faq-body collapse" id="faq5">
+                          <div class="faq-body" id="faq5">
                             <div class="faq-inner">
                                 <p>We're a non-profit organization, which means we depend on donations and grants to keep us going (bandwidth is expensive!).</p>
                                 <p>If you've found our materials helpful, please <a href="donate.html">donate</a> so we can continue to improve our resources. </p>
@@ -118,12 +118,12 @@
                         <div class="faq">
                           <div class="faq-heading">
 
-                            <div data-target="#faq6" data-toggle="collapse">
+                            <div data-target="#faq6">
                               <i class="icon-question-sign"></i>
                                I have a medical question &mdash; Can I ask you?
                             </div>
                           </div>
-                          <div class="faq-body collapse" id="faq6">
+                          <div class="faq-body" id="faq6">
                             <div class="faq-inner">
                                 <p>Unfortunately, no. You should contact a real doctor, and if you have a medical emergency, you should of course call 911 (or your country's emergency number).</p>
                                 </p>
