--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Page Not Found{% endblock %}
-{% block tagline_text %}Page Not Found{% endblock %}
+{% block title %}Error: Page Not Found{% endblock %}
+{% block tagline_text %}Error: Page Not Found{% endblock %}
 {% block maincontent %}
 <!--main content-->
 <section class="mainContentWrap">
