Tiny condition cleanup.

--- a/templates/conditions/_condition_page.html
+++ b/templates/conditions/_condition_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Heart and Vessels{% endblock %}
-{% block tagline_text %}Heart and Vessels{% endblock %}
+{% block title %}TITLE{% endblock %}
+{% block tagline_text %}TAGLINE_TEXT{% endblock %}
 {% block maincontent %}
 <section class="mainContentWrap">
 <div class="container mainContent">
