--- a/templates/conditions/_all_topics_page.html
+++ b/templates/conditions/_all_topics_page.html
@@ -2,29 +2,30 @@
 {% block maincontent %}
 <!--main content-->
 <div class="container mainContent">
-    <div class="row-fluid">
-        <!--description-->
-        <div class="span4">
-            <div class="item-description">
-                <h3>Welcome to ClinDesk</h3>
-                <div class="subtitle">
-                    <span class="icon-file "></span><a href="#">By {% block author_name %}author_name{% endblock %}</a>
-                </div>
-                <img src="{% block author_image %}author_image{% endblock %}" />
-                <p>{% block welcome_text %}welcome_text{% endblock %}</p>
-                <ul class="unstyled">
-                    <li><i class="icon-ok"></i>Background</li>
-                    <li><i class="icon-ok"></i>Epidemiology</li>
-                    <li><i class="icon-ok"></i>Symptoms</li>
-                    <li><i class="icon-ok"></i>Diagnosis</li>
-                    <li><i class="icon-ok"></i>Treatment</li>
-                    <li><i class="icon-ok"></i>Outcome</li>
-                </ul>
-                <br />
-                <a href="#condition-topics" class="btn btn-primary"><i class="icon-share icon-white"></i>See the Topics</a>
-            </div>
+  <div class="row-fluid">
+    <!--description-->
+    <div class="span4">
+      <div class="item-description">
+        <div class="subtitle">
+          <img height="171" width="150" src="{% block author_image %}author_image{% endblock %}" style="box-shadow: 3px 3px 8px #888;" alt="{% block author_name %}{% endblock %}" />
+	  <p><br>
+            <span class="icon-file "></span><a href="#">By {{ self.author_name() }}</a>
+	  </p>
         </div>
-
+	<p>{% block welcome_text %}welcome_text{% endblock %}</p>
+        <ul class="unstyled">
+          <li><i class="icon-ok"></i>Background</li>
+          <li><i class="icon-ok"></i>Epidemiology</li>
+          <li><i class="icon-ok"></i>Symptoms</li>
+          <li><i class="icon-ok"></i>Diagnosis</li>
+          <li><i class="icon-ok"></i>Treatment</li>
+          <li><i class="icon-ok"></i>Outcome</li>
+        </ul>
+        <br />
+        <a href="#condition-topics" class="btn btn-primary"><i class="icon-share icon-white"></i>See the Topics</a>
+      </div>
+    </div>
+    
         <div class="span8">
             <div class="innerSpacer">
               <iframe width="100%" height="360" seamless="seamless" src="http://www.youtube-nocookie.com/embed/{% block video_source %}{% endblock %}?rel=0&html5=1" frameborder="0"></iframe>
