--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML>
-<!--[if IE 7 ]>    <html class="ie7 no-js" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="ie8 no-js" lang="en"> <![endif]-->
-<!--[if IE 9 ]>    <html class="ie9 no-js" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
@@ -21,7 +18,6 @@
     <link href="{{ static('css/_styles.css') }}" rel="stylesheet" />
     {% endif %}
     <!--[if lt IE 9]><script type="text/javascript" src="{{ static('js/html5shiv/36.js') }}"></script><![endif]-->
-    <script type="text/javascript">(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
     {% include 'ga_tracking_code.html' %}
 </head>
 <body>
