--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
     <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
@@ -175,7 +174,6 @@
 <script type="text/javascript" src="{{ static('js/src/shared.js') }}" async></script>
 <script type="text/javascript" src="{{ static('js/src/cd.js') }}" async></script>
 {% endif %}
-<script type="text/javascript" src="{{ static('js/bootstrap/210.min.js') }}" async></script>
-{# TODO: Can't JS set the cookie? Why not use JS instead of Flask? #}
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js" async></script>
 </body>
 </html>
