--- a/templates/ga_tracking_code.html
+++ b/templates/ga_tracking_code.html
@@ -5,7 +5,6 @@ WCA: UA-32988270-2
 {%- if config.prod is defined -%}
 <script type="text/javascript">
   var _gaq = _gaq || [];
-  
 {%- if "whitecoatacademy" in config.apphost -%}
   _gaq.push(['_setAccount', 'UA-32988270-2']);
 {%- elif "clindesk" in config.apphost -%}
@@ -15,7 +14,7 @@ WCA: UA-32988270-2
   _gaq.push(['_trackPageview']);
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = 'https://ssl.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
