Modeling more disease page things.

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
-    <meta name="author" content="{% block meta_author %}{% endblock %}" />
+    <meta name="author" content="{% block meta_author %}Nick Semenkovich (semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
     {# Is it cool to have logic here? #}
     {%- if "whitecoatacademy" in config.apphost -%}
     <link href="{{ static('css/min.wca.css') }}" rel="stylesheet" />
