--- a/templates/base.html
+++ b/templates/base.html
@@ -17,162 +17,83 @@
     <link href="{{ static('css/_styles.css') }}" rel="stylesheet" />
     {% endif %}
     <!--[if lt IE 9]><script type="text/javascript" src="{{ static('js/html5shiv/36.js') }}"></script><![endif]-->
+
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ static('img/ico/apple-touch-icon-144-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ static('img/ico/apple-touch-icon-114-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ static('img/ico/apple-touch-icon-72-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" href="{{ static('img/ico/apple-touch-icon-57-precomposed.png') }}">
+
     {% include 'ga_tracking_code.html' %}
 </head>
-<body>
-<header class="navbar navbar-fixed-top" id="top">
+<body data-spy="scroll" data-target=".bs-docs-sidebar">
+
+<div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="btnTitle">Menu</span>
-                <span class="icon-chevron-down icon-white"></span>
-            </a>
-            <a class="brand" href="index.html" title="Home"><img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /></a>
-            <div class="nav-collapse">
-                <div class="smedia widget widget_search">
-                    <form class="form-inline" action="/search.html" id="searchform" role="search">
-                        <input type="hidden" name="cx" value="002941556813235485135:eikq6dcpctw"><input type="hidden" name="cof" value="FORID:11">
-                        <input type="text" class="input-medium span3" name="q" placeholder="Search...">
-                        <button class="icon-search" type="submit"></button>
-                    </form>
-                </div>
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="brand" href="/">ClinDesk</a>
+            <!-- Things that get hidden at <= 940px -->
+            <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/conditions/">Conditions</a></li> {#
-                    <li class="dropdown"><a href="/special-topics.html">More<b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                            <li><a href="full_width.html"><i class="icon-th icon-white"></i> &nbsp;<b>View All Topics</b></a></li>
-                            <li class="divider"></li>
-                            <li><a href="full_width.html">Heart &amp; Vascular <span class="badge badge-warning">New!</span></a></li>
-                            <li><a href="full_width.html">Heart &amp; Vascular <span class="badge badge-warning">New!</span></a></li>
-                            <li><a href="sidebar_right.html">Kidneys <span class="badge badge-info">Updated</span></a></li>
-                            <li><a href="sidebar_left.html">Lungs</a></li>
-                            <li><a href="sidebar_left.html">Blood, Bone Marrow, Lymphatics</a></li>
-                            <li><a href="sidebar_left.html">Digestive and Gastrointestinal</a></li>
-                            <li class="divider"></li>
-                            <li><a href="search.html"><i class="icon-question-sign icon-white"></i> &nbsp;Search</a></li>
-                        </ul>
-                    </li> #}
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/conditions/">Conditions</a></li>
                     <li><a href="/donate.html">Support Us</a></li>
                     <li><a href="/help.html">Help &amp; FAQ</a></li>
-                    <li class="last"><a href="/about.html">About</a></li>
+                    <li><a href="/about.html">About Us</a></li>
                 </ul>
+                <form class="navbar-search pull-right" action="/search.html" id="searchform" role="search">
+                    <input type="hidden" name="cx" value="002941556813235485135:eikq6dcpctw"><input type="hidden" name="cof" value="FORID:11">
+                    <input type="text" class="search-query span2" name="q" placeholder="Search">
+                </form>
             </div>
         </div>
     </div>
-</header>
-<section class="subnav">
-    <div class="container">
-        <div class="row-fluid tagline">
-            <span class="scroll-logo" style="display:none"></span>
-            <h2 id="slugtext">{% block tagline_text %}overwrite this tagline_text block{% endblock %}</h2>
-        </div>
-    </div>
-</section>
-{% block maincontent %}{% endblock %}
-<footer>
-    {#
-    <section class="testimonial">
+
+    {# <img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /> #}
+
+    <header class="jumbotron subhead" id="overview">
         <div class="container">
-            <div class="row-fluid">
-                <div class="span9"><blockquote><p>"Allow us to help you, to help your busines! Call us on <span class="tel">+0044 1034 5623</span> or get in touch via email at <a href="#">mentor@mentorbiz.com</a>"</p><small class="pull-right">Jane Tae, Customer Service</small></blockquote></div>
-                <div class="span3 mugshot"><img src="{{ static('img/content/client_mug2.png') }}" alt="client" /></div>
-            </div>
+            <h1>{% block tagline_text %}tagline_text{% endblock %}</h1>
+            <p class="lead">{% block lead %}lead{% endblock %}</p>
         </div>
-    </section>
-    #}
-    {# No great way to deal with this. Commented the section, since it adds a cute blue bar thing. #}
-    <section class="footerMain">
-        {#
+    </header>
+
+    <!-- Main content block -->
+    {% block maincontent %}maincontent{% endblock %}
+    <!-- End of main content block -->
+
+
+    <footer class="footer">
         <div class="container">
-            <div class="row-fluid">
-                <div class="span3">
-                    <div class="widget widget_newsletter">
-                        <h3>Newsletter</h3>
-                        <p>Lorem ipsum dolor sit amet, consec tetue adipiscing elit. Donec odio. Quis que vol utpat mattis eros. Nullam mal.</p>
-                        <form class="form-inline newsletter" action="php/newsletter.php" id="newsletterform" method="get" data-subscribed="Thank You" >
-                            <div class="control-group">
-                                <div class="input-append">
-                                    <input type="text" name="email" class="input-medium span2"  placeholder="Newsletter.."/>
-                                    <button class="btn" type="submit">Signup</button>
-                                </div>
-                            </div>
-                        </form>
-                        <p class="outro">Don't worry, your details are safe with us. For more info. read our <a href="#">privacy policy</a></p>
-                    </div>
-                </div>
-                <div class="span6">
-                    <div class="widget widget_recent_entries">
-                        <h3>Recent Posts <a href="#"><span class="label">Visit The Blog</span></a></h3>
-                        <ul>
-                            <li>
-                                <a class="thumb" href="blog_post_gallery_fullscreen.html"><img src="{{ static('img/content/recent_thumb2.jpg') }}" alt="thumb" /></a>
-                                <div>
-                                    <a class="title" href="blog_post_gallery_fullscreen.html">The Autumn Of Your Business..</a>
-                                    <p>Lorem ipsum dolor sit amet, consecte tuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet.</p>
-                                </div>
-                            </li>
-                            <li class="last">
-                                <a class="thumb" href="blog_post_gallery_thumbs.html"><img src="{{ static('img/content/recent_thumb1.jpg') }}" alt="thumb" /></a>
-                                <div>
-                                    <a class="title" href="blog_post_gallery_thumbs.html">Teach A Man To Fish..</a>
-                                    <p>Lorem ipsum dolor sit amet, consecte tuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="span3 last">
-                    <a href="index.html" class="logo-foot" title="Home"><img src="{{ static('img/content/logo_footer.png') }}" alt="mentor logo" /></a>
-                    <div class="widget widget_stats ">
-                        <a href="#">8,350<span>RSS</span></a>
-                        <a href="https://twitter.com/#!/pixelentity">4,170<span>Followers</span></a>
-                        <a class="last" href="blog_main.html">250<span>Articles</span></a>
-                    </div>
-                    <div class="widget widget_links">
-                        <h3>Links</h3>
-                        <ul>
-                            <li><a href="https://twitter.com/#!/ClinDesk">Follow us on Twitter</a><span>&rarr;</span></li>
-                            <li><a href="http://pixelentity.com">Freebies on pixelentity.com</a><span>&rarr;</span></li>
-                            <li><a href="http://themeforest.net/user/pixelentity">Join us on Envato</a><span>&rarr;</span></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p>&copy 2012 ClinDesk, Inc., some rights reserved</p>
+            <p>Videos are licensed under the Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/3.0">CC BY NC SA 3.0</a> license.</p>
+            <ul class="footer-links">
+                <li><a href="/">Home</a></li>
+                <li class="muted">&middot;</li>
+                <li><a href="/donate.html">Donate</a></li>
+                <li class="muted">&middot;</li>
+                <li><a href="/about.html#team">Contact Us</a></li>
+            </ul>
         </div>
-        #}
-    </section>
-    <section class="footerLower">
-        <div class="container">
-            <div class="row-fluid">
-                <div class="span3 copyright"><p>&copy; 2012 ClinDesk <br/><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank"><img src="{{ static('img/by-nc-sa.png') }}" /></a></p></div>
-                <div class="span7 footNav">
-                    <a class="first" href="/index.html">Home</a><span>&#124;</span>
-                    <a href="/conditions/">Conditions</a><span>&#124;</span>
-                    <a href="/donate.html">Donate</a><span>&#124;</span>
-                    <a href="/help.html">Help &amp; FAQ</a><span>&#124;</span>
-                    <a href="/about.html">About</a>
-                </div>
-                <div class="span2 smedia">
-                    <a href="https://www.facebook.com/ClinDesk" data-rel="tooltip" title="Facebook"  class="sm-icon sm-icon-facebook"></a>
-                    <a href="/about.html#contact" data-rel="tooltip" data-position="bottom" title="Email Us"  class="sm-icon sm-icon-email"></a>
-                    <a href="https://twitter.com/ClinDesk" data-position="bottom" data-rel="tooltip" title="Follow Us"  class="sm-icon sm-icon-twitter"></a>
-                </div>
-            </div>
-        </div>
-    </section>
-</footer>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-{# Is it cool to have logic here? #}
-{%- if "whitecoatacademy" in config.apphost -%}
-<script type="text/javascript" src="{{ static('js/min.wca.js') }}" async></script>
-{%- elif "clindesk" in config.apphost -%}
-<script type="text/javascript" src="{{ static('js/min.cd.js') }}" async></script>
-{% else %}
-<!-- WARNING: This ONLY loads CD on dev now. Fix this later //--->
-<script type="text/javascript" src="{{ static('js/src/shared.js') }}" async></script>
-<script type="text/javascript" src="{{ static('js/src/cd.js') }}" async></script>
-{% endif %}
-<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js" async></script>
+    </footer>
+
+
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    {# Is it cool to have logic here? #}
+    {%- if "whitecoatacademy" in config.apphost -%}
+    <script type="text/javascript" src="{{ static('js/min.wca.js') }}" async></script>
+    {%- elif "clindesk" in config.apphost -%}
+    <script type="text/javascript" src="{{ static('js/min.cd.js') }}" async></script>
+    {% else %}
+    <!-- WARNING: This ONLY loads CD on dev now. Fix this later //--->
+    <script type="text/javascript" src="{{ static('js/src/shared.js') }}" async></script>
+    <script type="text/javascript" src="{{ static('js/src/cd.js') }}" async></script>
+    {% endif %}
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js" async></script>
 </body>
 </html>
