--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="author" content="{% block meta_author %}Nick Semenkovich (semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
     {# Is it cool to have logic here? #}
     {%- if "whitecoatacademy" in config.apphost -%}
     <link href="{{ static('css/min.wca.css') }}" rel="stylesheet" />
@@ -83,7 +84,7 @@
 
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js" ></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
 
 {# Is it cool to have logic here? #}
 {%- if "whitecoatacademy" in config.apphost -%}
@@ -92,8 +93,8 @@
 <script type="text/javascript" src="{{ static('js/min.cd.js') }}" async></script>
 {% else %}
 <!-- WARNING: This ONLY loads CD on dev now. Fix this later //--->
-<script type="text/javascript" src="{{ static('js/src/shared.js') }}" ></script>
-<script type="text/javascript" src="{{ static('js/src/cd.js') }}" ></script>
+<script type="text/javascript" src="{{ static('js/src/shared.js') }}" async></script>
+<script type="text/javascript" src="{{ static('js/src/cd.js') }}" async></script>
 {% endif %}
 
 </body>
