--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1,26 +1,65 @@
 {% extends "base.html" %}
 {% block title %}Support Us{% endblock %}
-{% block tagline_text %}Supporting ClinDesk{% endblock %}
+{% block tagline_text %}Help Open Medicine{% endblock %}
+{% block lead %}Donate and help us to create free medical resources{% endblock %}
 {% block maincontent %}
-<section class="mainContentWrap" xmlns="http://www.w3.org/1999/html">
-          <div class="container mainContent">
-            <div class="row-fluid">
-              <div class="span12 post full">
-                <div class="row-fluid">
-                  <div class="span5">
-                    <div class="hero-unit">
-                      <h2>Help Open Medicine</h2>
-                      <p>We're trying our best to open medical education, but bandwidth and development costs are expensive! </p>
-                      {# <p>
-                        <a class="btn btn-info btn-large"><i class="icon-lock icon-white"></i>
-                          Donate via Amazon
-                        </a>
-                      </p> #}
-                  </div></div>
-                  <div class="span7">
-		    {#                              <blockquote><p>"Inspirational tiny quote here omg."</p><small class="pull-right">Some Guy</small></blockquote>#}
-                    <blockquote>
-                      <h2>Give Now</h2><br/>
+
+<div class="container">
+    <br><br>
+  <div class="row">
+      <div class="span4">
+      	<div class="well">
+      		<h2 class="muted">Hosting for A Day</h2>
+      		<p><span class="label">POPULAR</span></p>
+      		<ul>
+      			<li>10 users</li>
+      			<li>Unlimited access</li>
+      			<li>3TB of space</li>
+      			<li>E-mail support</li>
+      		</ul>
+      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+      		<hr>
+      		<h3>$15.99 / month</h3>
+      		<hr>
+      		<p><a class="btn btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+      	</div>
+      </div>
+      <div class="span4">
+      	<div class="well">
+      		<h2 class="text-warning">Sponsor a Disease</h2>
+      		<p><span class="label label-success">POPULAR</span></p>
+      		<ul>
+      			<li>20 users</li>
+      			<li>Unlimited access with no limits</li>
+      			<li>5TB of space</li>
+      		</ul>
+      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+      		<hr>
+      		<h3>$10.99 / month</h3>
+      		<hr>
+      		<p><a class="btn btn-success btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+      	</div>
+      </div>
+      <div class="span4">
+      	<div class="well">
+      		<h2 class="text-info">Give What You Can</h2>
+      		<p><span class="label label-info">BUDGET</span></p>
+      		<ul>
+      			<li>10 users</li>
+      			<li>5TB of space</li>
+      		</ul>
+      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+      		<hr>
+      		<h3>$8.99 / month</h3>
+      		<hr>
+            <p><a class="btn btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+      	</div>
+      </div>
+  </div>
+</div>
+
+
+{#
                       <h4>Dontatons of any amount are appreciated. Contributions help us directly cover hosting and operational expenses.</h4>
                       <p>
                           <form action="https://authorize.payments.amazon.com/pba/paypipeline" method="post">
@@ -42,168 +81,6 @@
                             <input type="submit" value="Donate via Amazon" class="btn btn-info btn-medium" style="margin-bottom:9px">
                           </form>
 		      </p>
-                    </blockquote>
-                  </div>
-                </div>
-{#
-                          <div class="row-fluid">
-                            <div class="span4">
-                              <div class="hero-unit price inverse well">
-                                <p class="type">Hosting for a Day</p>
-                                  <ul class="unstyled">
-                                    <li><i class="icon-ok icon-white"></i>Includes stuff</li>
-                                    <li><i class="icon-ok icon-white"></i>Other great items</li>
-                                    <li><i class="icon-ok icon-white"></i>Yep that too</li>
-                                  </ul>
-                                  <h1 style="letter-spacing: 1px;">$15</h1>
-                                  <br />
-                                <p>
-                                    <a class="btn btn-primary">Donate via Amazon</a>
-                                </p>
-                              </div>
-                            </div>
-
-                            <div class="span4">
-                              <div class="hero-unit price inverse well">
-                                <p class="type">Like a Sir </p>
-                                  <ul class="unstyled">
-                                    <li><i class="icon-ok icon-white"></i>Includes stuff</li>
-                                    <li><i class="icon-ok icon-white"></i>Other great items</li>
-                                    <li><i class="icon-ok icon-white"></i>Yep that too</li>
-                                  </ul>
-                                  <h1 style="letter-spacing: 1px;">$35</h1>
-                                  <br />
-                                <p>
-                                    <a class="btn btn-primary">Donate via Amazon</a>
-                                </p>
-                              </div>
-                            </div>
-
-                            <div class="span4">
-                              <div class="hero-unit price inverse well">
-                                <p class="type">Sponsor a Disease</p>
-                                  <ul class="unstyled">
-                                    <li><i class="icon-ok icon-white"></i>Includes stuff</li>
-                                    <li><i class="icon-ok icon-white"></i>Other great items</li>
-                                    <li><i class="icon-ok icon-white"></i>Yep that too</li>
-                                  </ul>
-                                  <h1 style="letter-spacing: 1px;">$60</h1>
-                                  <br />
-                                <p>
-                                    <a class="btn btn-primary">Donate via Amazon</a>
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-#}
-
-{#
-                          <div class="row-fluid">
-                            <div class="span4">
-                              <div class="hero-unit price inverse well">
-                                <p class="type">Hosting for a Day</p>
-                                  <ul class="unstyled">
-                                    <li><i class="icon-ok icon-white"></i>Includes stuff</li>
-                                    <li><i class="icon-ok icon-white"></i>Other great items</li>
-                                    <li><i class="icon-ok icon-white"></i>Yep that too</li>
-                                  </ul>
-                                  <h1 style="letter-spacing: 1px;">$100</h1>
-                                  <br />
-                                <p>
-                                    <a class="btn btn-primary">Donate via Amazon</a>
-                                </p>
-                              </div>
-                            </div>
-
-                            <div class="span4">
-                              <div class="hero-unit price inverse well">
-                                <p class="type">Like a Sir </p>
-                                  <ul class="unstyled">
-                                    <li><i class="icon-ok icon-white"></i>Includes stuff</li>
-                                    <li><i class="icon-ok icon-white"></i>Other great items</li>
-                                    <li><i class="icon-ok icon-white"></i>Yep that too</li>
-                                  </ul>
-                                  <h1 style="letter-spacing: 1px;">$250</h1>
-                                  <br />
-                                <p>
-                                    <a class="btn btn-primary">Donate via Amazon</a>
-                                </p>
-                              </div>
-                            </div>
-
-                            <div class="span4">
-                              <div class="hero-unit price inverse well">
-                                <p class="type">Sponsor a Disease</p>
-                                  <ul class="unstyled">
-                                    <li><i class="icon-ok icon-white"></i>Includes stuff</li>
-                                    <li><i class="icon-ok icon-white"></i>Other great items</li>
-                                    <li><i class="icon-ok icon-white"></i>Yep that too</li>
-                                  </ul>
-                                  <h1 style="letter-spacing: 1px;">$500</h1>
-                                  <br />
-                                <p>
-                                    <a class="btn btn-primary">Donate via Amazon</a>
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-#}
-
-{# In the future, make a separate "Supporters" page or section somewhere? #}
-{#                          <!--columns-->
-
-                          <div class="row-fluid">
-                            <div class="span6">
-                              <div class="divider dotted clearfix"><span></span></div>
-                              <h3>Platinum Donors</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue.</p>
-                            </div>
-                            <div class="span6">
-                              <div class="divider dotted clearfix"><span></span></div>
-                              <h3>In-Kind Donations</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue.</p>
-                            </div>
-                          </div>
-
-
-                          <div class="row-fluid">
-                            <div class="span4">
-                              <div class="divider dotted clearfix"><span></span></div>
-                              <h3>1/3 Column</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue.</p>
-                            </div>
-                            <div class="span4">
-                              <div class="divider dotted clearfix"><span></span></div>
-                              <h3>1/3 Column</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue.</p>
-                            </div>
-                            <div class="span4">
-                              <div class="divider dotted clearfix"><span></span></div>
-                              <h3>1/3 Column</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue.</p>
-                            </div>
-                          </div>
-
-
-
-
-                      </div>
-                    </div>
-                    <!--end post-->
-#}
-
-              </div>
-            </div>
-          </div>
-        </section>
+        #}
 
 {% endblock %}
-<!--
-    <section class="mainContentWrap" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
-          xmlns="http://www.w3.org/1999/html">
-   <div class="container mainContent">
-     <div class="row-fluid">
-
-
-         </div></div></section>
-//-->
