--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
             <!-- Things that get hidden at <= 940px -->
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/conditions/">Conditions</a></li>
                     <li><a href="/donate.html">Support Us</a></li>
                     <li><a href="/help.html">Help &amp; FAQ</a></li>
