Updates and tweaks.

--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Conditions and Diseases{% endblock %}
 {% block tagline_text %}Conditions{% endblock %}
+{% block lead %}Learn more about any disease or condition{% endblock %}
 {% block maincontent %}
 <!--main content-->
 <section class="mainContentWrap">
