--- a/templates/help.html
+++ b/templates/help.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Help &amp; FAQ{% endblock %}
-{% block tagline_text %}Help &amp; Frequently Asked Questions{% endblock %}
+{% block tagline_text %}Help &amp; FAQ{% endblock %}
+{% block lead %}Confused? Don't hesitate to e-mail us{% endblock %}
 {% block maincontent %}
     <section class="mainContentWrap" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
              xmlns="http://www.w3.org/1999/html">
