--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,6 @@
 {% block lead %}About ClinDesk &amp; White Coat Academy{% endblock %}
 {% block maincontent%}
 
-
 <div class="container">
 
   <!-- Docs nav
@@ -12,47 +11,37 @@
   <div class="row">
     <div class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav">
-        <li><a href="#download-bootstrap"><i class="icon-chevron-right"></i> Download</a></li>
-        <li><a href="#file-structure"><i class="icon-chevron-right"></i> File structure</a></li>
-        <li><a href="#contents"><i class="icon-chevron-right"></i> What's included</a></li>
-        <li><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
-        <li><a href="#examples"><i class="icon-chevron-right"></i> Examples</a></li>
-        <li><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
+        <li><a href="#our-philosophy"><i class="icon-book"></i><i class="icon-chevron-right"></i> Our Philosophy</a></li>
+        <li><a href="#the-team"><i class="icon-group"></i><i class="icon-chevron-right"></i> Meet the Team</a></li>
+        <li><a href="#non-profit-governance"><i class="icon-legal"></i><i class="icon-chevron-right"></i> Non-Profit Governance</a></li>
+        <li><a href="#contact-us"><i class="icon-envelope-alt"></i><i class="icon-chevron-right"></i> Contact Us</a></li>
       </ul>
     </div>
     <div class="span9">
 
-
-
-      <!-- Download
-      ================================================== -->
-      <section id="download-bootstrap">
+      <section id="our-philosophy">
         <div class="page-header">
-          <h1>1. Download</h1>
+          <h1>Our Philosophy</h1>
         </div>
-        <p class="lead">Before downloading, be sure to have a code editor (we recommend <a href="http://sublimetext.com/2">Sublime Text 2</a>) and some working knowledge of HTML and CSS. We won't walk through the source files here, but they are available for download. We'll focus on getting started with the compiled Bootstrap files.</p>
-
-        <div class="row-fluid">
-          <div class="span6">
-            <h2>Download compiled</h2>
-            <p><strong>Fastest way to get started:</strong> get the compiled and minified versions of our CSS, JS, and images. No docs or original source files.</p>
-            <p><a class="btn btn-large btn-primary" href="assets/bootstrap.zip" >Download Bootstrap</a></p>
-          </div>
-          <div class="span6">
-            <h2>Download source</h2>
-            <p>Get the original files for all CSS and JavaScript, along with a local copy of the docs by downloading the latest version directly from GitHub.</p>
-            <p><a class="btn btn-large" href="https://github.com/twitter/bootstrap/zipball/master" >Download Bootstrap source</a></p>
-          </div>
-        </div>
+          <p class="lead">ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with
+              medical knowledge and education. Our recent experiences in medical school have helped shape our view that
+              there is a disconnect between the training of physicians and the way patients learn about and understand
+              their health.</p>
+          <p class="lead">Our mission is to lead the transition of medical education from a proprietary to “open” process. We believe
+              this process should be scalable and agile -- health literacy should be accessible to everyone in a
+              context-appropriate fashion.</p>
+          <p class="lead">With that goal in mind, we have designed and built ClinDesk.org, a free video library that opens medical
+              education to patients and their families and friends. Our videos are organized by medical speciality and
+              specific disease, which walk you through the basic biology, “who and when” epidemiology, symptoms, and
+              treatment/outcomes of each condition you or someone you know might be facing.</p>
+          <p class="lead">We hope to clearly and concisely extend medical education to patients in an “open” fashion, providing them
+              with the most important information about diseases or conditions they may be confronted with.</p>
       </section>
 
 
-
-      <!-- File structure
-      ================================================== -->
-      <section id="file-structure">
+      <section id="the-team">
         <div class="page-header">
-          <h1>2. File structure</h1>
+          <h1>Meet the Team</h1>
         </div>
         <p class="lead">Within the download you'll find the following file structure and contents, logically grouping common assets and providing both compiled and minified variations.</p>
         <p>Once downloaded, unzip the compressed folder to see the structure of (the compiled) Bootstrap. You'll see something like this:</p>
@@ -73,12 +62,9 @@ bootstrap/
       </section>
 
 
-
-      <!-- Contents
-      ================================================== -->
-      <section id="contents">
+      <section id="non-profit-governance">
         <div class="page-header">
-          <h1>3. What's included</h1>
+          <h1>Non-Profit Governance</h1>
         </div>
         <p class="lead">Bootstrap comes equipped with HTML, CSS, and JS for all sorts of things, but they can be summarized with a handful of categories visible at the top of the <a href="http://getbootstrap.com">Bootstrap documentation</a>.</p>
 
@@ -116,13 +102,9 @@ bootstrap/
         <p>In future guides, we may walk through these components individually in more detail. Until then, look for each of these in the documentation for information on how to utilize and customize them.</p>
       </section>
 
-
-
-      <!-- HTML template
-      ================================================== -->
-      <section id="html-template">
+      <section id="contact-us">
         <div class="page-header">
-          <h1>4. Basic HTML template</h1>
+          <h1>Contact Us</h1>
         </div>
         <p class="lead">With a brief intro into the contents out of the way, we can focus on putting Bootstrap to use. To do that, we'll utilize a basic HTML template that includes everything we mentioned in the <a href="#file-structure">File structure</a>.</p>
         <p>Now, here's a look at a <strong>typical HTML file</strong>:</p>
@@ -246,42 +228,7 @@ bootstrap/
 </div>
 
 
-
-{#                  <li class="active"><a href="#philosophy"><i class="icon-white icon-info-sign"></i> Our Philosophy</a></li>
-                  <li><a href="#team"><i class="icon-user"></i> Meet the Team</a></li>
-                  <li><a href="#governance"><i class="icon-file"></i> Non-Profit Governance</a></li>
-                  <li><a href="#contact"><i class="icon-envelope"></i> Contact Us</a></li>
-        #}
-
-
         {#
-          <div class="span9">
-            <div class="row-fluid">
-              <div class="innerSpacer">
-                <div class="row-fluid pageTitle">
-                  <div class="span12"><h1>Our Philosophy</h1></div>
-                </div>
-                <div class="row-fluid">
-                  <div class="span12"><p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. Our recent experiences in medical school have helped shape our view that there is a disconnect between the training of physicians and the way patients learn about and understand their health.</p>
-
-                  <p>Our mission is to lead the transition of medical education from a proprietary to “open” process. We believe this process should be scalable and agile -- health literacy should be accessible to everyone in a context-appropriate fashion.</p>
-
-                  <p>With that goal in mind, we have designed and built ClinDesk.org, a free video library that opens medical education to patients and their families and friends. Our videos are organized by medical speciality and specific disease, which walk you through the basic biology, “who and when” epidemiology, symptoms, and treatment/outcomes of each condition you or someone you know might be facing.</p>
-
-                  <p>We hope to clearly and concisely extend medical education to patients in an “open” fashion, providing them with the most important information about diseases or conditions they may be confronted with.</p>
-
-                  <div class="divider dotted clearfix"><span></span></div>
-
-                  </div>
-                </div>
-
-
-
-              </div>
-            </div>
-          </div>
-
-        </div>
 
 
           <div class="row-fluid">
