--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,9 @@
     <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
-    <meta name="author" content="{% block meta_author %}Nick Semenkovich (semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
+    <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
-    {# Is it cool to have logic here? #}
     {%- if "whitecoatacademy" in config.apphost -%}
     <link href="{{ static('css/min.wca.css') }}" rel="stylesheet" />
     {%- elif "clindesk" in config.apphost -%}
@@ -17,14 +16,12 @@
     <link href="{{ static('css/_styles.css') }}" rel="stylesheet" />
     {% endif %}
     <!--[if lt IE 9]><script type="text/javascript" src="{{ static('js/html5shiv/36.js') }}"></script><![endif]-->
-
     {#
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ static('img/ico/apple-touch-icon-144-precomposed.png') }}">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ static('img/ico/apple-touch-icon-114-precomposed.png') }}">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ static('img/ico/apple-touch-icon-72-precomposed.png') }}">
     <link rel="apple-touch-icon-precomposed" href="{{ static('img/ico/apple-touch-icon-57-precomposed.png') }}">
     #}
-
     {% include 'ga_tracking_code.html' %}
 </head>
 <body data-spy="scroll" data-target=".bs-docs-sidebar">
