--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Search{% endblock %}
 {% block tagline_text %}Search{% endblock %}
+{% block lead %}{% endblock %}
 {% block maincontent %}
 <!--main content-->
 <section class="mainContentWrap">
