--- a/templates/about.html
+++ b/templates/about.html
@@ -114,7 +114,7 @@
             <div class="page-header">
                 <h1>Non-Profit Governance</h1>
             </div>
-            <div class="tabbable">
+            <div class="tabbable tabs-left">
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="#home" data-toggle="tab">Overview</a></li>
                     <li><a href="#docs-state" data-toggle="tab">State Filings</a></li>
